// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<About /> shallow rendering Match to snapshot 1`] = `
<About>
  <div
    className="about"
  />
</About>
`;

exports[`<About /> shallow rendering Match to snapshot 2`] = `
<div
  className="about"
/>
`;
